--- a/index.html
+++ b/index.html
@@ -103,10 +103,71 @@
             </div>
         </section>
         <!-- blog end -->
-        <!-- contact start -->
-        <section class="contact">
-            
+        <!-- newsletter start -->
+        <section class="newsletter">
+            <div class="container2">
+                <div class="signup">
+                    <h1 class="s_h1">Sign up for our newsletter!</h1>
+                    <form action="#" method="post" class="s_form">
+                        <input type="email" name="s_email" placeholder="Enter a valid email address" id="s_email">
+                        <button type="submit">
+                            <img src="images/sendbtn.png" alt="minimo">
+                        </button>
+                    </form>
+                </div>
+            </div>
         </section>
-        <!-- contact end -->
+        <!-- newsletter end -->
+         <!-- blog start -->
+         <section class="blog">
+            <div class="container2">
+                <div class="blogs">
+                    <!-- single start -->
+                    <div class="single">
+                        <div class="s_img">
+                            <img src="images/blog1.jpg" alt="minimo">
+                        </div>
+                        <p>Lifestyle</p>
+                        <h2>More than just a music festival </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus omnis eius cupiditate neque quam repellat expedita, atque iusto alias odit autem officia eligendi ipsa magni quisquam, labore doloribus nemo quibusdam.</p>
+                    </div>
+                    <!-- single end -->
+                     <!-- single start -->
+                     <div class="single">
+                        <div class="s_img">
+                            <img src="images/blog1.jpg" alt="minimo">
+                        </div>
+                        <p>Lifestyle</p>
+                        <h2>More than just a music festival </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus omnis eius cupiditate neque quam repellat expedita, atque iusto alias odit autem officia eligendi ipsa magni quisquam, labore doloribus nemo quibusdam.</p>
+                    </div>
+                    <!-- single end -->
+                </div>
+            </div>
+            <div class="loadmore">
+                <button type="button">Load more</button>
+            </div>
+        </section>
+        <!-- blog end -->
+        <!-- footer start -->
+        <footer>
+            <div class="container2">
+                <div class="terms">
+                    <ul>
+                        <li><a href="#">Terms and conditions</a></li>
+                        <li><a href="#">Privacy</a></li>
+                    </ul>
+                </div>
+                <div class="social">
+                    <ul>
+                        <li><a href="#">Follow</a></li>
+                        <li><a href="#"><img src="images/facebook.png" alt="minimo"></a></li>
+                        <li><a href="#"><img src="images/twitter.png" alt="minimo"></a></li>
+                        <li><a href="#"><img src="images/instagram.png" alt="minimo"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <!-- footer end -->
     </body>
 </html>
